[gd_scene load_steps=4 format=2]

[ext_resource path="res://Recursos/Healthbar(2)/Item.png" type="Texture" id=1]
[ext_resource path="res://script_coletavel.gd" type="Script" id=2]
[ext_resource path="res://Recursos/missil.png" type="Texture" id=3]

[node name="Node2D" type="Node2D"]
position = Vector2( 192, 128 )

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Area2D"]
visible = false
position = Vector2( 7.62939e-06, 0 )
scale = Vector2( 0.820678, 0.820678 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="Area2D"]
scale = Vector2( 0.14267, 0.14267 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="Area2D"]
wait_time = 3.0
one_shot = true
autostart = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
visible = false
position = Vector2( 7.62939e-06, 0 )
scale = Vector2( 0.820678, 0.820678 )
polygon = PoolVector2Array( 9.5, -16.5, 11, -11.5, 16.3, -11.5, 17.5, -10.3, 17.5, 9.5, 16.7, 9.5, 11.5, 11, 11.5, 16.3, 10.3, 17.5, -9.5, 17.5, -9.5, 16.5, -11, 11.5, -16.3, 11.5, -17.5, 10.3, -17.5, -9.6, -11.5, -11, -11.5, -16.7, -9.9, -17.5, 9.5, -17.5 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Area2D"]
visible = false
position = Vector2( -1.13085, 4.26719 )
scale = Vector2( 0.14267, 0.14267 )
polygon = PoolVector2Array( 5, -249.5, 5, -244, 15, -209.3, 15, -204, 20, -185.3, 20, -178, 28, -114.1, 28, -84.9, 23, -28.8, 23, 164, 51, 210.4, 51, 236, 48, 236, 21, 236.9, 21, 237.6, 1, 242.5, 1, 244.5, -1.8, 250, -11, 250, -11, 248, -11.8, 241.9, -22.7, 234, -36.2, 234, -50, 230.6, -50, 206.4, -24, 163.5, -24, -1, -30, -89.9, -30, -107.1, -28.9, -128, -27.8, -128, -18.8, -204, -17.5, -204, -6, -249, -6, -250, 3.3, -250 )

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Area2D/Timer" to="Area2D" method="_on_Timer_timeout"]
